
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:context=".MainActivity"
        android:id="@+id/container">


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_task"
            android:id="@+id/button2"
            android:onClick="schedulers"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/show_log"
            android:id="@+id/button3"
            android:onClick="showLog"
            android:layout_row="0"
            android:layout_column="2" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="1"
            android:layout_column="0" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_contacts_to_be_blocked"
            android:id="@+id/textView"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="3" />
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/imageButton"
            android:contentDescription=""
            android:onClick="addContact"
            android:background="@color/abc_search_url_text_normal"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Remove or edit blocked contacts"
            android:id="@+id/textView2"
            android:layout_weight="0.26"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/removeOrEditContact"
            android:onClick="removeOrEditContact"
            android:background="@color/abc_search_url_text_normal"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="3"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>


    </GridLayout>

