<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/textView2" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
        android:paddingBottom="25dp" android:paddingTop="5dp"
        android:text="@string/scheduler_task" android:textColor="#ffff861b"

        android:textSize="20sp"></TextView>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_schedule_task"
        android:textOff="Off"
        android:textOn="On" />

    <TextView
        android:id="@+id/ontextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_on_date_and_on_time" />

    <LinearLayout android:id="@+id/linearLayout0"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button android:id="@+id/onDate"
            android:layout_width="100dp" android:layout_height="wrap_content" android:layout_weight="0"
            android:text="@string/date"></Button>

        <EditText android:id="@+id/ontxtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:inputType="text">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button android:id="@+id/onTime"
            android:layout_width="100dp" android:layout_height="wrap_content"
            android:layout_weight="0" android:text="@string/time"></Button>

        <EditText android:id="@+id/ontxtTime"
            android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
            android:inputType="text">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/offtextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:text="Set Off Date and Off Time" />

    <LinearLayout android:id="@+id/linearLayout2"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button android:id="@+id/offdate"
            android:layout_width="100dp" android:layout_height="wrap_content" android:layout_weight="0"
            android:text="Date"></Button>

        <EditText android:id="@+id/offtxtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:inputType="text">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout3"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button android:id="@+id/offTime"
            android:layout_width="100dp" android:layout_height="wrap_content"
            android:layout_weight="0" android:text="Time"></Button>

        <EditText android:id="@+id/offtxtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/setbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="set"
        android:text="Set" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Send Message" />

    <EditText
        android:id="@+id/defaultmsg"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/checkBox"
        android:inputType="text"
        android:text="Set your default message" />

    <Button
        android:id="@+id/setdefaultmsgbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="Set" />

    </RelativeLayout>
</LinearLayout>